--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -1,15 +1,17 @@
 <div class="container">
-   
-    <div class="">
-      
-        <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': !formDisplay}"
-            (click)="onExistingUser();"> Existing User</button> &nbsp;&nbsp;
-        <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': formDisplay}"
-            (click)="onNewUser();"> New User</button>
-    </div>
-    <br><br>
-    <div class="" *ngIf="!formDisplay">
-        <form (ngSubmit)=onSubmit(f) #f="ngForm">
+    <form (ngSubmit)=onSubmit(f) #f="ngForm">
+
+        <div class="">
+            <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': !formDisplay}"
+                (click)="onExistingUser(f);"> Existing User</button> &nbsp;&nbsp;
+            <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': formDisplay}"
+                (click)="onNewUser();"> New User</button>
+        </div>
+        <br><br>
+
+        <!--  Existing User Form -->
+
+        <div class="" *ngIf="!formDisplay">
             <div class="form-group">
                 <label for="phone">Phone Number:</label>
                 <input type="number" class="form-control" id="phone" name="phone" pattern="[1-9]{1}[0-9]{9}" required
@@ -18,12 +20,10 @@
                 </span>
             </div>
             <br>
-
             <div class="form-group">
                 <label for="date">Date:</label> &nbsp;
                 <input type="date" (ngModelChange)="dateChanged($event)" id="date" name="date" value='' required
                     min="{{startDate}}" max="{{endDate}}" [(ngModel)]="booking.booking_date" #date="ngModel"> &nbsp;<br>
-
                 <span class="text-danger" *ngIf="!date.valid && date.touched">Please select date! </span>
             </div>
             <br>
@@ -33,7 +33,6 @@
                     required>
                     <option value=""></option>
                     <option *ngFor="let slot of displaySlots"> {{slot}}</option>
-
                 </select>
                 <span class="text-danger" *ngIf="!slot.valid && slot.touched && displaySlots.length !==0 ">Please select
                     a slot! </span>
@@ -42,38 +41,33 @@
                 <span class="text-danger" *ngIf="!slot.valid && slot.touched && date.untouched ">Please select date
                     first! </span>
             </div>
+            <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
+        </div>
 
 
+        <!-- New User Form -->
 
-            <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button> &nbsp;
-
-        </form>
-    </div> 
-
-    <div class="" *ngIf="formDisplay">
-
-        <form (ngSubmit)=onSubmit(f) #f="ngForm">
+        <div class="" *ngIf="formDisplay">
 
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" class="form-control" id="uname" name="uname" maxlength="40" required [(ngModel)]="booking.usr.uname"
-                    #name="ngModel">
+                <input type="text" class="form-control" id="uname" name="uname" maxlength="40" required
+                    [(ngModel)]="booking.usr.uname" #name="ngModel">
                 <span class="text-danger" *ngIf="!name.valid && name.touched">Please enter name! </span>
             </div>
-
 
             <div class="form-group">
                 <label for="address">Address:</label>
 
-                <textarea class="form-control" id="address" rows="3" name="address" maxlength="250" 
+                <textarea class="form-control" id="address" rows="3" name="address" maxlength="250"
                     [(ngModel)]="booking.usr.address" #textarea="ngModel"></textarea>
                 <span class="text-danger" *ngIf="!textarea.valid && textarea.touched">Please enter address! </span>
             </div>
 
             <div class="form-group">
                 <label for="city">City:</label>
-                <input type="text" class="form-control" id="city" name="city" maxlength="80" required [(ngModel)]="booking.usr.city"
-                    #city="ngModel">
+                <input type="text" class="form-control" id="city" name="city" maxlength="80" required
+                    [(ngModel)]="booking.usr.city" #city="ngModel">
                 <span class="text-danger" *ngIf="!city.valid && city.touched">Please enter city! </span>
             </div>
 
@@ -125,19 +119,16 @@
                 <span class="text-danger" *ngIf="!slot.valid && slot.touched && date.untouched ">Please select date
                     first! </span>
             </div>
-
-
-
             <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
-        </form>
+        </div>
+    </form>
 
- 
-    </div>
     <br><br>
+
+
     <div class="">
         <a [routerLink]="['/campaign',cid]"> Go back</a>
-
-    </div> 
+    </div>
 
 
 </div>
