--- a/src/app/campaign/campaign-details/campaign-details.component.css
+++ b/src/app/campaign/campaign-details/campaign-details.component.css
@@ -1,7 +1,8 @@
 
 .panel-body {
     overflow: scroll;
-    height: 100px;
+    height: 100%;
+    width: 100%;
 }
 .border-custom {
     border-top: 15px solid #eb9534;
