--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -5,7 +5,7 @@
             <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': !formDisplay}"
                 (click)="onExistingUser(f);"> Existing User</button> &nbsp;&nbsp;
             <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': formDisplay}"
-                (click)="onNewUser();"> New User</button>
+                (click)="onNewUser(f);"> New User</button>
         </div>
         <br><br>
 
@@ -14,7 +14,7 @@
         <div class="" *ngIf="!formDisplay">
             <div class="form-group">
                 <label for="phone">Phone Number:</label>
-                <input type="number" class="form-control" id="phone" name="phone" pattern="[1-9]{1}[0-9]{9}" required
+                <input type="number" class="form-control" id="phone" name="phone" pattern="[6-9]{1}[0-9]{9}" required
                     [(ngModel)]="booking.usr.contact" #phone="ngModel">
                 <span class="text-danger" *ngIf="!phone.valid && phone.touched">Please enter 10 digit phone number!
                 </span>
@@ -52,7 +52,7 @@
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" class="form-control" id="uname" name="uname" maxlength="40" required
-                    [(ngModel)]="booking.usr.uname" #name="ngModel">
+                    [(ngModel)]="booking.usr.uname" #name="ngModel" pattern="[A-Za-z ]{3,50}">
                 <span class="text-danger" *ngIf="!name.valid && name.touched">Please enter name! </span>
             </div>
 
@@ -61,13 +61,13 @@
 
                 <textarea class="form-control" id="address" rows="3" name="address" maxlength="250"
                     [(ngModel)]="booking.usr.address" #textarea="ngModel"></textarea>
-                <span class="text-danger" *ngIf="!textarea.valid && textarea.touched">Please enter address! </span>
+                <!-- <span class="text-danger" *ngIf="!textarea.valid && textarea.touched">Please enter address! </span> -->
             </div>
 
             <div class="form-group">
                 <label for="city">City:</label>
                 <input type="text" class="form-control" id="city" name="city" maxlength="80" required
-                    [(ngModel)]="booking.usr.city" #city="ngModel">
+                    [(ngModel)]="booking.usr.city" #city="ngModel" pattern="[A-Za-z ]{3,50}">
                 <span class="text-danger" *ngIf="!city.valid && city.touched">Please enter city! </span>
             </div>
 
@@ -82,15 +82,15 @@
 
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required maxlength="80"
+                <input type="email" class="form-control" id="email" name="email" maxlength="80"
                     [(ngModel)]="booking.usr.email" email #email="ngModel">
-                <span class="text-danger" *ngIf="!email.valid && email.touched">Please enter valid email! </span>
+                <span class="text-danger" *ngIf="!email.valid">Please enter valid email! </span>
             </div>
 
 
             <div class="form-group">
                 <label for="phone">Phone Number:</label>
-                <input type="number" class="form-control" id="phone" name="phone" pattern="[1-9]{1}[0-9]{9}" required
+                <input type="number" class="form-control" id="phone" name="phone" pattern="[6-9]{1}[0-9]{9}" required
                     [(ngModel)]="booking.usr.contact" #phone="ngModel">
                 <span class="text-danger" *ngIf="!phone.valid && phone.touched">Please enter 10 digit phone number!
                 </span>
