--- a/src/app/poster/posterform/posterform/posterform.component.html
+++ b/src/app/poster/posterform/posterform/posterform.component.html
@@ -1,15 +1,189 @@
-<p>posterform works!</p>
 <div class="container">
-    <form (ngSubmit)=onSubmit(f) #f="ngForm">
-        <div class="">
-            <div class="form-group">
-                <label for="phone">Poster Title:</label>
-                <input type="text" class="form-control" id="phone" name="phone" pattern="[6-9]{1}[0-9]{9}" required
-                    [(ngModel)]="posterModel.title" #phone="ngModel">
-            </div>
-            <br>
-            <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
+    <div class="row">
+        <div class="col">
+                <form (ngSubmit)=onSubmit(f) #f="ngForm">
+                    <div class="">
+                        <div class="form-group">
+                            <label for="phone">Title:</label>
+                            <input type="text" class="form-control" id="phone" name="phone" 
+                                [(ngModel)]="posterModel.title" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Subtitle:</label>
+                            <input type="text" class="form-control" id="subtitle" name="subtitle"
+                                [(ngModel)]="posterModel.subtitle" #phone="ngModel">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone">Select Main Image:</label>
+                            <span style="color:red;" *ngIf="imageErrMessageMain">{{imageErrMessageMain}}</span>
+                            <input #file type="file" accept='image/*' (change)="loadImage(file.files,'main')" />
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Select Footer Image:</label>
+                            <span style="color:red;" *ngIf="imageErrMessageFooter">{{imageErrMessageFooter}}</span>
+                            <input #file1 type="file" accept='image/*' (change)="loadImage(file1.files,'footer')" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone">Image Title:</label>
+                            <input type="text" class="form-control" id="subtitle" name="subtitle"
+                                [(ngModel)]="posterModel.imageTitle" #phone="ngModel">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone">imageDesciptionLine1:</label>
+                            <input type="text" class="form-control" id="imageDesciptionLine1" name="imageDesciptionLine1"
+                                [(ngModel)]="posterModel.imageDesciptionLine1" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">imageDesciptionLine2:</label>
+                            <input type="text" class="form-control" id="imageDesciptionLine2" name="imageDesciptionLine2"
+                                [(ngModel)]="posterModel.imageDesciptionLine2" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">posterTopicDesciption:</label>
+                            <input type="text" class="form-control" id="posterTopicDesciption" name="posterTopicDesciption"
+                                [(ngModel)]="posterModel.posterTopicDesciption" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">eventDate:</label>
+                            <input type="text" class="form-control" id="eventDate" name="eventDate"
+                                [(ngModel)]="posterModel.eventDate" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">onlineMeetingId:</label>
+                            <input type="text" class="form-control" id="onlineMeetingId" name="onlineMeetingId"
+                                [(ngModel)]="posterModel.onlineMeetingId" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">onlineMeetingPassword:</label>
+                            <input type="text" class="form-control" id="onlineMeetingPassword" name="onlineMeetingPassword"
+                                [(ngModel)]="posterModel.onlineMeetingPassword" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">contactPersonName1:</label>
+                            <input type="text" class="form-control" id="contactPersonName1" name="contactPersonName1"
+                                [(ngModel)]="posterModel.contactPersonName1" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">contactPersonName2:</label>
+                            <input type="text" class="form-control" id="contactPersonName2" name="contactPersonName2"
+                                [(ngModel)]="posterModel.contactPersonName2" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">contactPersonPhone1:</label>
+                            <input type="text" class="form-control" id="contactPersonPhone1" name="contactPersonPhone1"
+                                [(ngModel)]="posterModel.contactPersonPhone1" #phone="ngModel">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">contactPersonPhone2:</label>
+                            <input type="text" class="form-control" id="contactPersonPhone2" name="contactPersonPhone2"
+                                [(ngModel)]="posterModel.contactPersonPhone2" #phone="ngModel">
+                        </div>
+                        <button class="btn btn-primary" (click)="clear()">Clear</button>&nbsp;
+                        <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
+                    </div>
+                    </form>
         </div>
-        </form>
-   <br><br>
+         <div class="col">
+            <div> <a [routerLink]="" (click)="convertToImage()">Download as Image</a> </div>
+
+            <div #cnvrtToImage class="wrapper border container-fluid container-custom">
+                <div  class="row">
+                    <div class="col-md-12">
+                    
+                        <div class="">  	
+                            <p> </p><p> </p>			
+                                <h2 class="maintitle text-center">
+                                    {{posterModel.title}}
+                                </h2>             
+                                <h4 class="subtitle text-center">
+                                    {{posterModel.subtitle}}
+                                </h4>             
+                                <p> </p><p> </p><p> </p>
+                            <div class="row"> 
+                                <div class="col"></div>
+                                    <div class="col text-center"> 
+                                    <!--
+                                        <img class="img-fluid" alt="Bootstrap Image Preview" src="assets/images/dj.jpeg">
+                                    -->
+                                    <img class="img-fluid" alt="Bootstrap Image Preview" src="{{posterModel.mainImageUrl}}">
+                                    </div>
+                                    <div class="col"></div>
+                             </div>       
+                            <p></p>
+                            <div class="imageTitle text-center">
+                                <h3>
+                                    <small>
+                                        {{posterModel.imageTitle}}
+                                    </small> 
+                               </h3>
+                            </div>
+                            <div class="imageDesciptionLine1 text-center">
+                                <h3>
+                                    <small>
+                                        {{posterModel.imageDesciptionLine1}}
+                                    </small> 
+                               </h3>
+                            </div>
+                            <div class="imageDesciptionLine2 text-center">
+                                <h3>
+                                    <small>
+                                        {{posterModel.imageDesciptionLine2}}
+                                    </small> 
+                               </h3>
+                            </div>
+                            <p></p>
+                            <div class="row text-center">
+                                    <div class="col"></div>
+                                    <div class="col-6 topic-container posterTopicDesciption">
+                                        <h3>
+                                            <small>
+                                                {{posterModel.posterTopicDesciption}}
+                                            </small> 
+                                        </h3>
+                                    </div>
+                                <div class="col"></div>
+                            </div>
+                            <div class="eventDate text-center">
+                                <h3>
+                                    <small>
+                                            Dates: {{posterModel.eventDate}}
+                                    </small> 
+                               </h3>
+                            </div>
+                        
+                        <br><br>
+                        <div class="onlineMeetingId container-fluid">
+                            <div class="row">
+                                Zoom Meeting Id: {{posterModel.onlineMeetingId}}
+                             </div>
+                             <div class="onlineMeetingId row">
+                                Zoom Password: {{posterModel.onlineMeetingPassword}}
+                             </div>
+                            <div class="contactPersons row">
+                                Contacts:  {{posterModel.contactPersonName1}} : {{posterModel.contactPersonPhone1}}
+                                        <br>
+                                            {{posterModel.contactPersonName2}} : {{posterModel.contactPersonPhone2}} 
+                             </div>
+                         </div>
+                          <p> </p>
+                        <div class="row">
+                            <div class="col-sm">
+                                <div>
+                                    <img class="img-fluid" style="width:100%" alt="Bootstrap Image Preview" src="{{posterModel.footerImageUrl}}">
+                                </div>
+                            </div>
+                            
+                          </div>
+                          <p> </p><p> </p>	
+                              
+                    </div>
+                    </div>
+                </div>
+               
+            </div>
+         </div>
+    </div>
 </div>
