poster header changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,9 @@
 <div *ngIf='nav.visible'>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <!-- <img src="/img/quick-campaign-2.png" alt="logo"> -->
+        <div><img class="w-50 img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo"> </div>
+        
         <a class="navbar-brand" routerLink=''>{{headerBrand}}</a>
-
-
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -19,7 +18,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" routerLink='/campaign' routerLinkActive='active'>Campaign</a>
+                    <a class="nav-link" routerLink='/campaign' routerLinkActive='active'>Campaign/Posters</a>
                 </li>
 
             </ul>
