--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,8 +11,8 @@
     </div>
     -->
     <div class="container-fluid">
-        <a  (click)="openPosterFormInNewWindow()"  style="cursor: pointer;">
-            Poster Form
+        <a  (click)="openPosterForm()"  style="cursor: pointer;">
+            Dynamic Poster
         </a>
     </div>   
 </div>
