--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,11 @@
 <div *ngIf='nav.visible'>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <div><img class="w-50 img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo"> </div>
+        <div class=""><img class="w-25 img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo">
+            <a class="navbar-brand" routerLink=''>{{headerBrand}}</a>
+        </div>
         
-        <a class="navbar-brand" routerLink=''>{{headerBrand}}</a>
-
-        <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
+        
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
