login component added

--- a/src/app/poster/posterform/posterform/posterform.component.html
+++ b/src/app/poster/posterform/posterform/posterform.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row pageText">
         Fill the below form to create dynamic Poster. Click on 'Download as Image' link to download the Poster.
-        <br>Happy Posting!!
+        <br>Happy Postering!!
     </div>
     <div class="row">
 
