--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,17 @@
 <div *ngIf='nav.visible'>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <div class=""><img class="w-25 img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo">
-            <a class="navbar-brand" routerLink=''>{{headerBrand}}</a>
+        <div class="">
+            <div class="w-20">
+                <img class="img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo">
+            </div>
+            
+           <div class="w-80"></div>
         </div>
         
         
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div *ngIf="screenName!='login'" class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" routerLink='/about-us' routerLinkActive='active'>About Us</a>
@@ -15,6 +19,9 @@
 
                 <li class="nav-item">
                     <a class="nav-link" routerLink='/campaign' routerLinkActive='active'>Campaign/Posters</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink='/login' routerLinkActive='active'>Signout</a>
                 </li>
 
             </ul>
