--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <!-- Brand -->
         <div class="">
             <div class="w-20">
-                <img class="img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo">
+                <img class="logo img-fluid" src="../../assets/images/quick-campaign-2.png" alt="logo">
             </div>
             
            <div class="w-80"></div>
