--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,8 +6,8 @@
             <h5 class="card-title text-center">Sign In</h5>
             <form class="form-signin">
               <div class="form-label-group">
-                <input type="email" name="inputEmail" class="form-control" placeholder="Email address" 
-                required autofocus [(ngModel)]="loginModel.loginId">
+                <input type="text" name="inputEmail" class="form-control" placeholder="User Name" 
+                required [(ngModel)]="loginModel.loginId">
                 <label for="inputEmail"></label>
               </div>
 
