--- a/src/app/poster/posterform/posterform/posterform.component.css
+++ b/src/app/poster/posterform/posterform/posterform.component.css
@@ -29,7 +29,17 @@
 .eventDate {
     color: #900C3F;
     font-weight: bold;
+    
 }
 .imagesection{
     border-style: dashed;
+}
+
+.onlineMeetingId{
+    background-color: #900C3F;
+    color: white;
+}
+.contactPersons{
+    background-color: #900C3F;
+    color: white;
 }
