--- a/src/app/poster/posterform/posterform/posterform.component.html
+++ b/src/app/poster/posterform/posterform/posterform.component.html
@@ -112,15 +112,15 @@
                                 </h4>             
                                 <p> </p><p> </p><p> </p>
                             <div class="row"> 
-                                <div class="col"></div>
-                                    <div class="col text-center"> 
+                                <div class="col-2"></div>
+                                    <div class="col-8 text-center"> 
                                     <!--
                                         <img class="img-fluid" alt="Bootstrap Image Preview" src="assets/images/dj.jpeg">
                                     -->
                                     <img class="img-fluid" *ngIf="posterModel.mainImageUrl" alt="Bootstrap Image Preview" 
                                     src="{{posterModel.mainImageUrl}}">
                                     </div>
-                                    <div class="col"></div>
+                                    <div class="col-2"></div>
                              </div>       
                             <p></p>
                             <div class="imageTitle text-center">
